RESOLVED FIXED55413
Only IndexedDB's error event should be cancelable
https://bugs.webkit.org/show_bug.cgi?id=55413
Summary Only IndexedDB's error event should be cancelable
Jeremy Orlow
Reported 2011-02-28 14:50:45 PST
Only IndexedDB's error event should be cancelable
Attachments
Patch (4.42 KB, patch)
2011-02-28 15:01 PST, Jeremy Orlow
no flags
Patch (6.11 KB, patch)
2011-02-28 15:21 PST, Jeremy Orlow
steveblock: review+
Jeremy Orlow
Comment 1 2011-02-28 15:01:46 PST
Jeremy Orlow
Comment 2 2011-02-28 15:21:55 PST
Jeremy Orlow
Comment 3 2011-02-28 15:22:50 PST
super easy review
Steve Block
Comment 4 2011-03-01 01:59:09 PST
Comment on attachment 84133 [details] Patch r=me
Jeremy Orlow
Comment 5 2011-03-01 12:37:51 PST
WebKit Review Bot
Comment 6 2011-03-01 13:23:07 PST
http://trac.webkit.org/changeset/80025 might have broken Qt Linux Release The following tests are not passing: editing/deleting/4916235-1.html editing/deleting/5390681.html editing/deleting/5546763.html editing/deleting/delete-3775172-fix.html editing/deleting/delete-at-paragraph-boundaries-007.html editing/deleting/delete-before-block-image-1.html
Note You need to log in before you can comment on or make changes to this bug.