2011-02-28  Jeremy Orlow  <jorlow@chromium.org>

Reviewed by Steve Block.

        Only IndexedDB's error event should be cancelable
        https://bugs.webkit.org/show_bug.cgi?id=55413

        Add checks to existing tests.

        * storage/indexeddb/objectstore-basics.html:
        * storage/indexeddb/transaction-basics.html:
2011-02-28  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Steve Block.

        Only IndexedDB's error event should be cancelable
        https://bugs.webkit.org/show_bug.cgi?id=55413

        * storage/IDBRequest.cpp:
        (WebCore::createSuccessEvent):
        * storage/IDBTransaction.cpp:
        (WebCore::IDBTransaction::onAbort):
        (WebCore::IDBTransaction::onComplete):

Canonical link: https://commits.webkit.org/69922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80025 268f45cc-cd09-0410-ab3c-d52691b4dbfc